# source-sdk-2013

sp/src/: CMakeLists.txt
sp/src/choreoobjects/: CMakeLists.txt
sp/src/cmake/: config.cmake  lib_macros.cmake  platform_dirs.cmake  source_base.cmake  source_dll_base.cmake  source_dll_posix_base.cmake  source_dll_win32_base.cmake  source_lib_base.cmake  source_lib_posix_base.cmake  source_posix_base.cmake  source_video_base.cmake
sp/src/game/client/: CMakeLists.txt
sp/src/game/server/: CMakeLists.txt
sp/src/mathlib/: CMakeLists.txt
sp/src/raytrace/: CMakeLists.txt
sp/src/responserules/: CMakeLists.txt
sp/src/tier1/: CMakeLists.txt
sp/src/utils/common/: CMakeLists.txt
sp/src/vscript/: CMakeLists.txt
